src/objects/ClientAuthDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SuperUserProfile__c</fullName>
        <label>SuperUserProfile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncHour__c</fullName>
        <label>SyncHour(s)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientId__c</fullName>
        <label>clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <label>clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ClientAuthDetails</label>
</CustomObject>